<resources>
    <string name="app_name">ورزشی رزرو</string>
    <string name="app_version">نسخه 1.0</string>
    <string name="splash_title">ورزشی رزرو</string>
    <string name="splash_description">رزرو آنلاین مکان های ورزشی</string>
    <string name="content_description_post_thumbnail">post thumbnail</string>
    <string name="content_description">content description</string>
    <string name="content_description_vector_location">vector location</string>
    <string name="content_description_appbar_image_view">AppBar Image View</string>
    <string name="verification_step">verification step</string>
    <string name="reserve_step">reserveHistory step</string>
    <string name="login_title">ورود به حساب</string>
    <string name="tel">تلفن</string>
    <string name="lorem">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است.</string>
    <string name="enter">ورود</string>
    <string name="password">رمز عبور</string>
    <string name="tel_sample">شماره تلفن همراه</string>
    <string name="login_description">به حساب خود در ورزشی رزرو وارد شوید تا از تاریخچه رزرو خود با خبر شوید.</string>
    <string name="empty_password">پسورد اجباری است. لطفا پسورد را وارد کنید.</string>
    <string name="empty_phone">تلفن اجباری است. لطفا تلفن را وارد کنید.</string>
    <string name="empty_confirm_code">کد دریافتی را وارد نمایید.</string>
    <string name="invalid_phone">تلفن وارد شده صحیح نمی باشد.</string>
    <string name="invalid_password">اطلاعات وارد شده صحیح نیستند.</string>
    <string name="bottom_history">تاریخچه</string>
    <string name="bottom_settings">تنظیمات</string>
    <string name="bottom_reserve">رزرو</string>
    <string name="history_user_name">نام</string>
    <string name="history_location">مکان</string>
    <string name="history_date">تاریخ</string>
    <string name="history_time">سانس</string>
    <string name="accept">تایید</string>
    <string name="repassword">رمز عبور را مجدد وارد نمایید</string>
    <string name="enter_valid_password">رمز عبور معتبر وارد نمایید</string>
    <string name="change_password">تغییر رمز عبور</string>
    <string name="logout">خروج از سیستم</string>
    <string name="city">شهر</string>
    <string name="search">جستجو</string>
    <string name="location">مکان</string>
    <string name="date">تاریخ</string>
    <string name="waiting">لطفا صبر کنید</string>
    <string name="confirm_changes">ثبت تغییرات</string>
    <string name="current_password">رمز فعلی شما</string>
    <string name="new_password">رمز جدید</string>
    <string name="please_input_official_name">از این مشخصات برای شناسایی شما هنگام ورود به مکان ورزشی استفاده میشود.</string>
    <string name="name_example">مثل: حسن رضایی</string>
    <string name="official_name">نام و نام خانوادگی</string>
    <string name="input_your_name">نام خود را وارد کنید.</string>
    <string name="refill_password">تکرار رمز عبور</string>
    <string name="password_description">برای حفظ اطلاعات حساب تان رمز عبور خود را در مدت های کوتاه تغییر دهید.</string>
    <string name="your_password_changed">رمز شما تغییر کرد.</string>
    <string name="new_password_most_have_3_letter">رمز جدید باید بیشتر از سه حرف داشته باشد.</string>
    <string name="password_wrong">رمز عبور وارد شده اشتباه است.</string>
    <string name="reserve">رزرو کردن</string>
    <string name="seventh">ج</string>
    <string name="sixth">پ</string>
    <string name="fiveth">چ</string>
    <string name="fourth">س</string>
    <string name="threeth">د</string>
    <string name="twoth">ی</string>
    <string name="oneth">ش</string>
    <string name="toman">تومان</string>
    <string name="aboutme">درباره ما</string>
    <string name="dont_have_account">آیا حساب ندارید؟</string>
    <string name="create">ایجاد</string>
    <string name="create_account">ایجاد حساب</string>
    <string name="register_description">برای رزرو مکان و اطلاع از رزرو ها قبلی نیاز به ایجاد حساب دارید</string>
    <string name="name_family">نام و نام خانوادگی</string>
    <string name="name_sample">مثل محمدحسن رضایی</string>
    <string name="your_password">رمز شما</string>
    <string name="programmer_name">محمدحسن رضایی تبار</string>
    <string name="programmer_description">برنامه نویس اندروید و وب ورزشی رزرو به صورت کامل هستند. نسخه اندروید ورزشی رزرو اپن سورس هست و شما میتوانید با استفاده از دکمه گیت هاب به سورس آن دسترسی داشته باشید.</string>
    <string name="reservs_description">ورزشی رزرو برای تسهیل رزرو مکان های ورزشی در مهر ماه ۹۷ شروع به کار کرد است. و همواره در تلاش است با بروز ترین روش‌ها رزرو مکان‌های ورزشی را بهبود بخشد.</string>
    <string name="github">گیت هاب</string>
    <string name="instagram">اینستاگرام</string>
    <string name="telegram">تلگرام</string>
    <string name="city_semi">شهر:</string>
    <string name="phone_semi">تلفن:</string>
    <string name="pay_means_accept_rules">با پرداخت کردن هزینه موافقت خود را با تمامی قوانین و مقررات ورزشی رزرو اعلام میکنید</string>
    <string name="payment">تکمیل و پرداخت</string>
    <string name="return_credit_to_account">در صورتی که هزینه رزرو از حساب شما کم شد است به زودی به حساب شما باز خواهد گشت.</string>
    <string name="payment_error">در پرداخت هزینه خطایی اتفاق افتاد</string>
    <string name="payment_success">پرداخت با موفقیت انجام شد</string>
    <string name="result_success_body">برای اطمینان و یاد آوری میتوانید به بخش تاریخچه مراجعه کنید</string>
    <string name="reservable_locations">مکان های قابل رزرو</string>
    <string name="reserve_history">تاریخچه رزرو</string>
    <string name="do_you_have_account">قبلا از ورزشی رزرو استفاده کرده اید؟</string>
    <string name="login_to_account">ورود به حساب</string>
    <string name="date_quote">تاریخ:</string>
    <string name="please_check_your_internet">خطای اتصال به اینترنت. لطفا اتصال اینترنت خود را بررسی کنید.</string>
    <string name="error_occurre">خطایی رخ داد</string>
    <string name="empty_collection">چیزی وجود ندارد</string>
    <string name="empty_description">هیچ محتوایی جهت ارائه وجود ندارد</string>
    <string name="today">امروز</string>
    <string name="city_example">شهرستان گتوند</string>
    <string name="date_example">1398/02/12</string>
    <string name="time_example">14 الی 16</string>
    <string name="state_example">منقضی شده</string>
    <string name="name_location">اسم مکان:</string>
    <string name="name_">نام:</string>
    <string name="error_in_internet">خطای اتصال به اینترنت</string>
    <string name="forget_description">شماره تلفنی را که قبلا با آن ثبت نام کرده اید را وارد نمایید تا کلمه عبور برایتان از طریق پیامک ارسال گردد.</string>
    <string name="send_password">ارسال کلمه عبور</string>
    <string name="forget_password">بازیابی کلمه عبور</string>
    <string name="forget_password_question">کلمه عبور رو فراموش کردی؟</string>
    <string name="vector_for_login_fragment">vector for login fragment</string>
    <string name="send_verification_code">ارسال کد فعال سازی</string>
    <string name="input_confirm_code">کد دریافتی را وارد نمایید.</string>
    <string name="btn_send_cdoe">ارسال کد فعال سازی</string>
    <string name="btn_verify_code">بررسی صحت کد</string>
    <string name="verify_code">کد تایید</string>
    <string name="change_phone">ویرایش شماره</string>
    <string name="birthday">تاریخ تولد</string>
    <string name="gender">جنسیت</string>
    <string name="male">آقا</string>
    <string name="female">خانم</string>
    <string name="salon_call_to_action">مشاهده سانس و رزرو</string>
    <string name="thousand_toman">هزار تومان</string>
    <string name="reserve_time">رزرو سانس</string>
</resources>
