<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imgProfile"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/mhbolivand" />

    <TextView
        android:id="@+id/txtProgrammerName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:fontFamily="@font/iransans"
        android:text="@string/programmer_name"
        android:textColor="@color/colorText2"
        android:textSize="24dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgProfile" />

    <TextView
        android:id="@+id/txtProgrammerDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/iransans"
        android:lineHeight="30dp"
        android:padding="24dp"
        android:text="@string/programmer_description"
        android:textColor="@color/colorText"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtProgrammerName" />

    <Button
        android:id="@+id/btnGithub"
        android:layout_width="108dp"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_github_bg"
        android:drawableEnd="@drawable/github"
        android:fontFamily="@font/iransans"
        android:padding="12dp"
        android:text="@string/github"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtProgrammerDescription"
        tools:layout_editor_absoluteX="76dp"
        tools:layout_editor_absoluteY="418dp" />

    <Button
        android:id="@+id/btnInstagram"
        android:layout_width="108dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/btn_instagram_bg"
        android:drawableEnd="@drawable/ic_instagram"
        android:fontFamily="@font/iransans"
        android:padding="12dp"
        android:text="@string/instagram"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnGithub" />

    <Button
        android:id="@+id/btnTelegram"
        android:layout_width="108dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/btn_telegram_bg"
        android:drawableEnd="@drawable/ic_telegram"
        android:fontFamily="@font/iransans"
        android:padding="12dp"
        android:text="@string/telegram"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnInstagram" />
</androidx.constraintlayout.widget.ConstraintLayout>