<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardItem"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="12dp"
    app:cardCornerRadius="5dp"
    app:cardElevation="3dp">

    <LinearLayout
        android:id="@+id/llClickable"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgThumbnail"
                android:layout_width="match_parent"
                android:layout_height="270dp"
                android:contentDescription="@string/content_description_post_thumbnail"
                android:scaleType="fitXY" />

            <TextView
                android:id="@+id/txtTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/iransans"
                android:gravity="center"
                android:padding="12dp"
                android:text="@string/app_name"
                android:textSize="16dp" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="#10101010"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center_vertical|start"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/content_description_vector_location"
                android:padding="12dp"
                app:srcCompat="@drawable/ic_location" />

            <TextView
                android:id="@+id/txtLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@id/imageView2"
                android:layout_toStartOf="@id/imageView2"
                android:fontFamily="@font/iransans"
                android:text="@string/app_name"
                android:textSize="12dp" />

        </RelativeLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
